# TODO correct .toml

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["gmach <gmach@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
