[project]
name = "ex1"
version = "0.1.0"
authors = [
    {name = "gmach"}
]
requires-python = "3.10.12"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.2.6",
    "pandas==2.3.3"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
